name:                security-model
version:             0.1.0.0
synopsis:            Security model in Haskell
description:         Pragmatic authentication/authorization framework.
homepage:            https://github.com/mgrabmueller/security-model
bug-reports:         https://github.com/mgrabmueller/security-model/issues
license:             BSD3
license-file:        LICENSE
author:              Martin Grabmueller
maintainer:          martin@grabmueller.de
-- copyright:
category:            System
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/mgrabmueller/security-model

library
  exposed-modules:
    Security.Model
    Security.Model.Types
    Security.Model.Backend.Test
  -- other-modules:
  -- other-extensions:
  build-depends:
    base >= 4.7 && < 4.8,
    text >= 1.2 && < 1.3,
    time >= 1.4 && < 1.5
  hs-source-dirs:      src
  default-language:    Haskell2010
